// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RippleButton /> should render as a disabled ripple button 1`] = `
<RippleButton
  className=""
  disabled={true}
  flat={false}
  onClick={null}
  rippleClassName=""
  rippleSize={null}
  type="primary"
  wrapContent={true}
>
  <Button
    className=""
    disabled={true}
    flat={false}
    onClick={null}
    type="primary"
    wrapContent={true}
  >
    <Button
      className="css-5rbc6o "
      disabled={true}
      onClick={null}
    >
      <button
        className="css-5rbc6o  css-1rn65c0"
        data-test-id="Button"
        disabled={true}
        onClick={null}
      >
        <div
          className="css-4uxwj9"
        >
          Press me
        </div>
      </button>
    </Button>
  </Button>
</RippleButton>
`;

exports[`<RippleButton /> should render as a primary ripple button 1`] = `
<RippleButton
  className=""
  disabled={false}
  flat={false}
  onClick={null}
  rippleClassName=""
  rippleSize={null}
  type="primary"
  wrapContent={true}
>
  <Button
    className=""
    disabled={false}
    flat={false}
    onClick={null}
    type="primary"
    wrapContent={false}
  >
    <Button
      className="css-1y1e1q7 "
      disabled={false}
      onClick={null}
    >
      <button
        className="css-1y1e1q7  css-1rn65c0"
        data-test-id="Button"
        disabled={false}
        onClick={null}
      >
        <Ripple
          className="css-8s1fw2 "
          color="#000"
          disabled={false}
          fill={true}
          onComplete={[Function]}
          overflow={false}
          size={null}
        >
          <div
            aria-hidden={true}
            className="css-8s1fw2 "
            data-test-id="Ripple"
            onClick={[Function]}
            style={null}
          >
            Press me
          </div>
        </Ripple>
      </button>
    </Button>
  </Button>
</RippleButton>
`;

exports[`<RippleButton /> should render as a regular ripple button effect if type is omitted 1`] = `
<Button
  className=""
  disabled={false}
  flat={false}
  onClick={null}
  type="primary"
  wrapContent={false}
>
  <Ripple
    className="css-8s1fw2 "
    color="#000"
    disabled={false}
    fill={true}
    onComplete={[Function]}
    overflow={false}
    size={null}
  >
    Press me
  </Ripple>
</Button>
`;

exports[`<RippleButton /> should render as a regular ripple button if type is explicitly defined 1`] = `
<RippleButton
  className=""
  disabled={false}
  flat={false}
  onClick={null}
  rippleClassName=""
  rippleSize={null}
  type="regular"
  wrapContent={true}
>
  <Button
    className=""
    disabled={false}
    flat={false}
    onClick={null}
    type="regular"
    wrapContent={false}
  >
    <Button
      className="css-6bfwc1 "
      disabled={false}
      onClick={null}
    >
      <button
        className="css-6bfwc1  css-1rn65c0"
        data-test-id="Button"
        disabled={false}
        onClick={null}
      >
        <Ripple
          className="css-8s1fw2 "
          color="#000"
          disabled={false}
          fill={true}
          onComplete={[Function]}
          overflow={false}
          size={null}
        >
          <div
            aria-hidden={true}
            className="css-8s1fw2 "
            data-test-id="Ripple"
            onClick={[Function]}
            style={null}
          >
            Press me
          </div>
        </Ripple>
      </button>
    </Button>
  </Button>
</RippleButton>
`;

exports[`<RippleButton /> should render as a secondary ripple button 1`] = `
<RippleButton
  className=""
  disabled={false}
  flat={false}
  onClick={null}
  rippleClassName=""
  rippleSize={null}
  type="secondary"
  wrapContent={true}
>
  <Button
    className=""
    disabled={false}
    flat={false}
    onClick={null}
    type="secondary"
    wrapContent={false}
  >
    <Button
      className="css-5xfjjh "
      disabled={false}
      onClick={null}
    >
      <button
        className="css-5xfjjh  css-1rn65c0"
        data-test-id="Button"
        disabled={false}
        onClick={null}
      >
        <Ripple
          className="css-8s1fw2 "
          color="#000"
          disabled={false}
          fill={true}
          onComplete={[Function]}
          overflow={false}
          size={null}
        >
          <div
            aria-hidden={true}
            className="css-8s1fw2 "
            data-test-id="Ripple"
            onClick={[Function]}
            style={null}
          >
            Press me
          </div>
        </Ripple>
      </button>
    </Button>
  </Button>
</RippleButton>
`;
